--- a/index.html
+++ b/index.html
@@ -71,16 +71,24 @@
 
 		   		<div class="col-md-6">
 		      		<div class = "about">
-						<h1 style="color: #7a7a7a">Two are better than one<img src="pics/icons/high-five.png" alt = "high-five icon" align="middle" class = "home_icon"></h1>
-						<h4 style="color: #7a7a7a">Reliable sensitivity with two PIR sensors</h4> 
+						<h1 style="color: #727171">Two are better than one<img src="pics/icons/high-five.png" alt = "high-five icon" align="middle" class = "home_icon"></h1>
+						<h4 style="color: #727171">Reliable sensitivity with two PIR sensors</h4> 
 						<img src = "pics/product/pir_banner_clear.png" style = "width: 100%;">
+					</div>
+		    	</div>
+		    	<div class="col-md-6">
+		      		<div class = "about">
+						<h1 style="color: #727171">Everything goes!</h1>
+						<h4 style="color: #727171">MigmaAd supports the following image formats:</h4>
+						<br>
+						<h5 style="color: #727171"> JPE &nbsp&nbsp PNG &nbsp&nbsp GIF &nbsp&nbsp PNG<br><br>SVG &nbsp&nbsp ICO &nbsp&nbsp WBMP<br><br>TIF &nbsp&nbsp BMP &nbsp&nbsp PCX</h5>
 					</div>
 		    	</div>
 			</div>
 		</div>
 	</section>
 
-
+	<br><br><br>
 
 	<!--Image carousel-->
 	<!--
