--- a/support.html
+++ b/support.html
@@ -50,7 +50,7 @@
 		<br><br>
 		<h2>Don't worry. If there is an issue please email us and chat directly with our engineers.</h2>
 		<hr>
-		<img src = "pics/icons/help.png" alt = "first-aid icon" style = "display: block; width: 25%; margin-left: auto; margin-right: auto;">
+		<img src = "pics/icons/help.png" alt = "first-aid icon" style = "display: block; width: 200px; margin-left: auto; margin-right: auto;">
 		<a class = "email" href = "mailto:support@migmasys.com">support@migmasys.com</a>
 
 		<br><br><br><br>
@@ -58,7 +58,7 @@
 
 	<div class = "container">
 		<div class = "row">
-		  	<div class = "col-md-12" style = "background-color: #f2f2f2;">
+		  	<div class = "col-md-12" style = "background-color: #f4f4f4;">
 		  		<h1 class = "grey_header">Common Solutions</h1>
 		  	</div>
 		</div>
