--- a/support.html
+++ b/support.html
@@ -96,8 +96,20 @@
 		  	<div class="row">
 		    	<div class="col-md-6" style="padding: 20px 40px">
 
-		    		<h3>How to something</h3>
-		    		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
+		    		<h3>Unable to see images?</h3>
+		    		<p>Sometimes images are saved without their file extension. For example, an image of file type "jpeg" and name "image" would normally be saved on your computer as "image.jpeg" but in small cases it is saved as just "image".</p> 
+		    		<br>
+		    		<p>Follow these steps to troubleshoot:</p>
+		    		<br>
+		    		<p>1. 
+			      	Check file type by right clicking the image. If on a mac, go to the "get info" tab and if on a pc, go to the "properties" tab to see the kind of file.</p>
+
+			      	<p>2. 
+			      	Rename the image file with the file type by renaming it "name.jpeg" or "name.png" depending on the kind of file you have from step 1. and the original "name" of the image.</p>
+
+			      	<p>3. 
+			      	Save the images to your USB stick and restart MigmaAd with the new USB stick.</p>
+
 				    	
 		    	</div>
 		   			
