--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<h1 style="color: #727171">Everything goes!</h1>
 						<h4 style="color: #727171">MigmaAd supports the following image formats:</h4>
 						<br>
-						<h5 style="color: #727171"> JPE &nbsp&nbsp PNG &nbsp&nbsp GIF &nbsp&nbsp PNG<br><br>SVG &nbsp&nbsp ICO &nbsp&nbsp WBMP<br><br>TIF &nbsp&nbsp BMP &nbsp&nbsp PCX</h5>
+						<h5 style="color: #727171"> JPEG &nbsp&nbsp PNG &nbsp&nbsp GIF <br><br>SVG &nbsp&nbsp ICO &nbsp&nbsp WBMP<br><br>TIF &nbsp&nbsp BMP &nbsp&nbsp PCX</h5>
 					</div>
 		    	</div>
 			</div>
